--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -8,28 +8,52 @@
 
 .left-side-reservation {
   padding: 0;
-  display: flex;
-  flex-direction: column;
-
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  gap: 1em;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    'total pie'
+    'line status'
+    'reviews status';
   height: 100%;
-  .row {
-    padding: 0;
+
+  .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: #0000001f 0 6px 16px;
+    padding: 0em 0.5em;
+    border-radius: 15px;
     height: 100%;
-
-    .box {
-      display: flex;
-      flex-direction: column;
+    width: 100%;
+    h1 {
+      text-align: center;
+      font-size: 1em;
+    }
+    &.total {
+      grid-area: total;
       justify-content: center;
-      box-shadow: #0000001f 0 6px 16px;
-      padding: 0em 0.5em;
-      border-radius: 15px;
-      width: 100%;
-      height: 100%;
-
-      h1 {
-        text-align: center;
-        font-size: 1em;
-      }
+      align-items: center;
+      height: 60%;
+      padding: 0.75em;
+      margin-block-start: 0;
+    }
+    &.line {
+      grid-area: line;
+      margin-bottom: 1em;
+    }
+    &.pie {
+      grid-area: pie;
+    }
+    &.status {
+      grid-area: status;
+      justify-content: space-around;
+    }
+    &.reviews {
+      grid-area: reviews;
     }
   }
 }
