--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,7 @@
 @import 'cmps/AppFooter';
 @import 'cmps/AppHeaderMobile';
 @import 'cmps/AppFooterMobile';
+@import 'cmps/InnerHeaderMobile';
 
 
 // Detalis
