--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -5,6 +5,21 @@
   margin: 0;
 }
 
+// &::after {
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // z-index: -11;
+    // width: 100%;
+    // height: 100%;
+    // content: '';
+    // opacity: 1;
+    // transform-origin: 50% 0%;
+    // background-color: white;
+    // transition: transform 250ms ease;
+//   }
+
+
 .screen-shadow {
   position: fixed;
   top: 155px;
