more dashboard design

--- a/src/assets/styles/cmps/Dashboard.scss
+++ b/src/assets/styles/cmps/Dashboard.scss
@@ -1,19 +1,31 @@
 .dashboard-nav-container {
   display: flex;
   justify-content: space-evenly;
-  width: 50%;
+  width: 60%;
   margin: auto;
+  
   > * {
-    color: black;
-    padding: 5px;
+    color: rgb(250, 249, 249);
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background: radial-gradient(
+      circle at left,
+      #ff385c 0%,
+      #e61e4d 27.5%,
+      #e31c5f 40%,
+      #d70466 57.5%,
+      #bd1e59 75%,
+      #bd1e59 100%);
+      border-radius: 5px;
+    
   }
   > *:hover {
     transition: 0.5s;
-    scale: 1.05;
+    scale: 1.1;
     // border-bottom: 1px solid black;
     // background-color: rgba(52, 51, 51, 0.2);
-    background-color: rgb(255, 56, 92, 0.1);
-    box-shadow: 1px 0px 10px 01px rgb(255, 56, 92, 0.3);
     border-radius: 5px;
   }
 }
