--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -5,7 +5,8 @@
         flex-direction: column;
         margin-block-end: 10px;
         font-size: 1rem;
-        margin-block-start: 70px;
+        margin-block-start: 4em;
+        margin-block-end: 2.5em;
 
         .mini-card {
             border: 1px solid #DDDDDD;
@@ -24,6 +25,7 @@
                     font-size: 1.3rem;
                     height: 10px;
                     margin-block-end: 20px;
+                    z-index: 0;
                 }
 
                 .info {
@@ -50,7 +52,7 @@
                 grid-row: 1/3;
 
                 .link {
-                    font-family: AirbnbCereal-Book;
+                    font-family: Airbnb_Cereal-Medium;
                     margin-block-start: 1em;
                     margin-block-end: 0;
                     display: flex;
@@ -59,9 +61,7 @@
                     color: $clr1;
                     background: radial-gradient(circle at left, #ff385c 0%, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
                     font-size: 1rem;
-                    border: 1px solid $clr8;
                     padding: 5px;
-                    border-radius: 10px;
                     border-radius: 50px;
                 }
             }
@@ -107,7 +107,6 @@
             font-family: Airbnb_Cereal-Bold;
             font-size: 1.35rem;
 
-
             img {
                 border-radius: 10px;
             }
@@ -129,46 +128,27 @@
                     font-size: 1.45rem;
                     flex-wrap: nowrap;
 
-
                     .main-header {
                         font-size: 1.35rem;
                     }
 
                     .info {
-                        .dates {
-                            margin-block: 1em;
-                        }
+                        width: 70%;
 
                         .header {
+                            // color: $clr9;
                             font-family: Airbnb_Cereal-Bold;
-                            font-size: 1.25rem;
+                            font-size: 1.15rem;
+                        }
+
+                        .dates {
+                            margin-block: 1em;
                         }
                     }
 
                     img {
                         object-fit: cover;
                         width: 65%;
-                    }
-                }
-
-                &.wishlist {
-                    grid-column: 5/7;
-                    grid-row: 1/3;
-
-                    .link {
-                        font-family: AirbnbCereal-Book;
-                        margin-block-start: 1em;
-                        margin-block-end: 0;
-                        display: flex;
-                        justify-content: center;
-                        margin-block-end: 1em;
-                        color: $clr1;
-                        background: radial-gradient(circle at left, #ff385c 0%, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
-                        font-size: 1rem;
-                        border: 1px solid $clr8;
-                        padding: 5px;
-                        border-radius: 10px;
-                        border-radius: 50px;
                     }
                 }
             }
