--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -106,6 +106,7 @@
             margin-block-end: 10px;
             font-family: Airbnb_Cereal-Bold;
             font-size: 1.35rem;
+            margin-block-start: 0;
 
             img {
                 border-radius: 10px;
@@ -176,7 +177,7 @@
 
                         .header {
                             font-family: Airbnb_Cereal-Bold;
-                            font-size: 1.15rem;
+                            font-size: 1rem;
                         }
                     }
                 }
