--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -2,6 +2,7 @@
   border-radius: 13px;
   gap: 0.5em;
   // flex-wrap: wrap;
+  margin-block-start: 30px;
   height: 73vh;
   justify-content: center;
 }
