--- a/src/assets/styles/cmps/Dashboard.scss
+++ b/src/assets/styles/cmps/Dashboard.scss
@@ -1,30 +1,19 @@
 .dashboard-nav-container {
   display: flex;
-  justify-content: space-evenly;
-  width: 60%;
+  justify-content: space-between;
+  width: 30%;
   margin: auto;
-  
+
   > * {
-    color: rgb(250, 249, 249);
-    padding-right: 15px;
-    padding-left: 15px;
+    color: rgb(0, 0, 0);
     padding-top: 5px;
     padding-bottom: 5px;
-    background: radial-gradient(
-      circle at left,
-      #ff385c 0%,
-      #e61e4d 27.5%,
-      #e31c5f 40%,
-      #d70466 57.5%,
-      #bd1e59 75%,
-      #bd1e59 100%);
-      border-radius: 5px;
-    
+    border-radius: 5px;
+    font-family: Airbnb_Cereal-Book;
   }
   > *:hover {
     transition: 0.5s;
-    scale: 1.1;
-    // border-bottom: 1px solid black;
+    text-decoration: underline;
     // background-color: rgba(52, 51, 51, 0.2);
     border-radius: 5px;
   }
