--- a/src/assets/styles/cmps/StayReservation.scss
+++ b/src/assets/styles/cmps/StayReservation.scss
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    padding: 0em 0em 2em 0em;
     h3,
     p {
       margin: 0;
@@ -53,8 +53,8 @@
     h3 {
       margin-bottom: 1em;
     }
-    border-bottom: 1px solid black;
-    height: 100%;
+    border-bottom: 1px solid rgba(224, 217, 217, 0.666);
+    // height: 100%;
   }
 
   /////////////////////////////////////
@@ -68,6 +68,7 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 2fr 1fr;
       gap: 0.5em;
+      margin-bottom: 0.8em;
 
       img {
         grid-area: img;
@@ -91,7 +92,16 @@
         }
       }
     }
-
+    .divush {
+      // display: flex;
+      // flex-direction: column;
+      // gap: 2em;
+      > * {
+        padding: 1em 0em 0em 0em;
+        margin-bottom: 1em;
+        border-top: 1px solid rgb(205, 199, 199);
+      }
+    }
     .order-protected {
       img {
         width: 60px;
